--- a/chaves.parent/chaves.domain/chaves.model/pom.xml
+++ b/chaves.parent/chaves.domain/chaves.model/pom.xml
@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>br.ufba</groupId>
-    <artifactId>chaves.parent</artifactId>
+    <artifactId>chaves.domain</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>chaves.domain</artifactId>
-  <name>chaves.domain</name>
+  <artifactId>chaves.model</artifactId>
+  <name>chaves.model</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
