--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.url=jdbc:h2:file:~/dasboot
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.max-active=10
+spring.datasource.max-idle=8
+spring.datasource.max-wait=10000
+spring.datasource.min-evictable-idle-time-millis=1000
+spring.datasource.min-ide=8
+spring.datasource.time-between-eviction-runs-millis=1
+
