--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .DS_Store
 *.iml
 target/
-
+.gitignore
+.project
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -15,3 +16,4 @@ target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
