Service layer sample and entities remapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.datasource.dbcp.min-evictable-idle-time-millis=1000
 spring.datasource.dbcp.min-idle=8
 spring.datasource.dbcp.time-between-eviction-runs-millis=1
 
-
+#spring.jackson.serialization.fail-on-empty-beans=false
