Adicao de tela Reservar Sala e tela Cronograma ainda incompletas. Adicionando também a funcionalidade de selecao de data (DatePickerFragment).

--- a/mobile/ChavesIME/app/src/main/AndroidManifest.xml
+++ b/mobile/ChavesIME/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".ReservarSalaActivity" />
+        <activity android:name=".CronogramaActivity"></activity>
     </application>
 
 </manifest>
