Add Tela de reserva por data

--- a/mobile/ChavesIME/app/src/main/AndroidManifest.xml
+++ b/mobile/ChavesIME/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".controller.HomeActivity" />
+        <activity android:name=".controller.CadastroPorDataActivity"></activity>
     </application>
 
 </manifest>
