--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,22 @@
 			<version>1.10</version>
 		</dependency>
 
+                <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-web</artifactId>
+                        <version>${springsecurity.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-config</artifactId>
+                        <version>${springsecurity.version}</version>
+                </dependency>
+
 	</dependencies>
 
 	<properties>
 		<java.version>1.8</java.version>
+                <springsecurity.version>4.0.1.RELEASE</springsecurity.version>
 	</properties>
 
 	<build>
