--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+                <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-crypto</artifactId>
+                        <version>${springsecurity.version}</version>
+                </dependency>
 
                 <dependency>
                         <groupId>org.springframework.security</groupId>
