--- a/mobile/ChavesIME/app/src/main/AndroidManifest.xml
+++ b/mobile/ChavesIME/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".controller.HomeActivity" />
-        <activity android:name=".controller.CadastroPorDataActivity"></activity>
+        <activity android:name=".controller.CadastroPorDataActivity" />
         <activity android:name=".ReservarSalaActivity" />
-        <activity android:name=".CronogramaActivity"></activity>
+        <activity android:name=".CronogramaActivity" />
+        <activity android:name=".PassarChaveActivity" />
+        <activity android:name=".ReceberChaveActivity"></activity>
     </application>
 
 </manifest>
