--- a/mobile/ChavesIME/app/src/main/AndroidManifest.xml
+++ b/mobile/ChavesIME/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.ufba.chavesime">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -10,9 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".controller.LoginActivity"
-            android:windowSoftInputMode="stateHidden|stateAlwaysHidden">
+        <activity android:name=".controller.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,15 +18,23 @@
             </intent-filter>
         </activity>
         <activity android:name=".controller.HomeActivity" />
+        <activity android:name=".controller.CadastroPorDataActivity"></activity>
+        <activity android:name=".ReservarSalaActivity" />
+        <activity android:name=".CronogramaActivity"></activity>
 
-        <activity android:name=".controller.ReservarPorDataActivity"
-            android:windowSoftInputMode="stateHidden|stateAlwaysHidden"/>
-        <activity android:name=".controller.ReservarSalaActivity" />
-        <activity android:name=".controller.CronogramaActivity" />
-        <activity android:name=".controller.PassarChaveActivity" />
-        <activity android:name=".controller.ReceberChaveActivity" />
-        <activity android:name=".controller.CadastroActivity" />
-        <activity android:name=".model.MainActivity"></activity>
+        <service
+            android:name=".controller.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".controller.MyFirebaseInstanceIDService">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+        </intent-filter>
+        </service>
 
     </application>
 
