--- a/mobile/ChavesIME/build.gradle
+++ b/mobile/ChavesIME/build.gradle
@@ -1,16 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        buildscript {
+            repositories {
+                jcenter()
+            }
+            dependencies {
+                classpath 'com.android.tools.build:gradle:2.2.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
+                //Add this line for push
+                classpath 'com.google.gms:google-services:3.0.0'
+
+                // NOTE: Do not place your application dependencies here; they belong
+                // in the individual module build.gradle files
+            }
+        }
 
 allprojects {
     repositories {
@@ -21,3 +24,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
